OT1/y.output
Grammar

    0 $accept: lines $end

    1 lines: lines exprs ';'
    2      | lines ';'
    3      | /* empty */

    4 exprs: exprs expr
    5      | expr

    6 expr: expr '|' expr
    7     | expr '*'
    8     | expr '+'
    9     | expr '?'
   10     | '(' exprs ')'
   11     | CHAR
   12     | EMPTY


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10
')' (41) 10
'*' (42) 7
'+' (43) 8
';' (59) 1 2
'?' (63) 9
'|' (124) 6
error (256)
CHAR (258) 11
EMPTY (259) 12


Nonterminals, with rules where they appear

$accept (12)
    on left: 0
lines (13)
    on left: 1 2 3, on right: 0 1 2
exprs (14)
    on left: 4 5, on right: 1 4 10
expr (15)
    on left: 6 7 8 9 10 11 12, on right: 4 5 6 7 8 9


state 0

    0 $accept: . lines $end

    $default  reduce using rule 3 (lines)

    lines  go to state 1


state 1

    0 $accept: lines . $end
    1 lines: lines . exprs ';'
    2      | lines . ';'

    $end   shift, and go to state 2
    CHAR   shift, and go to state 3
    EMPTY  shift, and go to state 4
    ';'    shift, and go to state 5
    '('    shift, and go to state 6

    exprs  go to state 7
    expr   go to state 8


state 2

    0 $accept: lines $end .

    $default  accept


state 3

   11 expr: CHAR .

    $default  reduce using rule 11 (expr)


state 4

   12 expr: EMPTY .

    $default  reduce using rule 12 (expr)


state 5

    2 lines: lines ';' .

    $default  reduce using rule 2 (lines)


state 6

   10 expr: '(' . exprs ')'

    CHAR   shift, and go to state 3
    EMPTY  shift, and go to state 4
    '('    shift, and go to state 6

    exprs  go to state 9
    expr   go to state 8


state 7

    1 lines: lines exprs . ';'
    4 exprs: exprs . expr

    CHAR   shift, and go to state 3
    EMPTY  shift, and go to state 4
    ';'    shift, and go to state 10
    '('    shift, and go to state 6

    expr  go to state 11


state 8

    5 exprs: expr .
    6 expr: expr . '|' expr
    7     | expr . '*'
    8     | expr . '+'
    9     | expr . '?'

    '|'  shift, and go to state 12
    '*'  shift, and go to state 13
    '+'  shift, and go to state 14
    '?'  shift, and go to state 15

    $default  reduce using rule 5 (exprs)


state 9

    4 exprs: exprs . expr
   10 expr: '(' exprs . ')'

    CHAR   shift, and go to state 3
    EMPTY  shift, and go to state 4
    '('    shift, and go to state 6
    ')'    shift, and go to state 16

    expr  go to state 11


state 10

    1 lines: lines exprs ';' .

    $default  reduce using rule 1 (lines)


state 11

    4 exprs: exprs expr .
    6 expr: expr . '|' expr
    7     | expr . '*'
    8     | expr . '+'
    9     | expr . '?'

    '|'  shift, and go to state 12
    '*'  shift, and go to state 13
    '+'  shift, and go to state 14
    '?'  shift, and go to state 15

    $default  reduce using rule 4 (exprs)


state 12

    6 expr: expr '|' . expr

    CHAR   shift, and go to state 3
    EMPTY  shift, and go to state 4
    '('    shift, and go to state 6

    expr  go to state 17


state 13

    7 expr: expr '*' .

    $default  reduce using rule 7 (expr)


state 14

    8 expr: expr '+' .

    $default  reduce using rule 8 (expr)


state 15

    9 expr: expr '?' .

    $default  reduce using rule 9 (expr)


state 16

   10 expr: '(' exprs ')' .

    $default  reduce using rule 10 (expr)


state 17

    6 expr: expr . '|' expr
    6     | expr '|' expr .
    7     | expr . '*'
    8     | expr . '+'
    9     | expr . '?'

    '*'  shift, and go to state 13
    '+'  shift, and go to state 14
    '?'  shift, and go to state 15

    $default  reduce using rule 6 (expr)
